Fix: Rendering on mobile devices

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -350,7 +350,7 @@ hr {
 	}
 
 	main {
-		padding: 1.5em 1em;
+		padding: 1.5em 0.5em;
 	}
 
 	h1 {
